--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,160 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+
+.body{
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --gray: #2C2D2F;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lateral-bar{
+  grid-area: 1 / 1 / 2 / 2;
+  background-color: var(--gray);
+  min-width: 248px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  max-width: 248px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+}
+.store-icons{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: start;
+  flex-direction: column;
+}
+[class*='divide-row']{
+  min-height: 50vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.divide-row-text-businessApp{
+  align-items: center;
+}
+.textfield-container{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+
+}
+.page-container-business-basic-data{
+  width: 90%;
+}
+[class*='page-container']{
+  display: flex;
+  flex-direction: row;
+  flex-basis: 50%;
+  padding-left: 2%;
+  padding-top: 5%;
+  padding-right: 2%;
+  justify-content: center;
+  align-content: center;
+  /*background-color: red;*/
+  min-height: 80vh;
+  width: 96%;
+}
+.page-container-business-app{
+  padding-right: 10%;
+  padding-left: 10%;
+  width: 80%;
+
+}
+.up-section-lateral-bar{
+  display: flex;
+  justify-content: center;
+}
+.down-section-lateral-bar {
+  font-weight: bold;
   color: white;
+  display: flex;
+  flex-direction: column;
+}
+.menu-item{
+  padding-left: 20%;
+}
+.img-size{
+  width: 80%;
+}
+.logo-lateral-bar{
+  width: 50%;
+}
+.store-image{
+  height: 40%;
+}
+.img-app-container{
+  flex-basis: 20%;
+}
+.img-app-logo{
+  width: 20%;
+  padding-left: 10%;
+}
+.main-body{
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-columns: 248px auto;
+  grid-template-rows: auto;
+}
+.top-bar{
+  height: 4.75rem;
+  background-color: white;
+  box-shadow: 0 4px 6px -6px black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.top-menu-items{
+  flex-basis: 60%;
+  padding-right: 20%;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
+.main-content{
+  grid-area: 1 / 2 / 2 / 3;
+}
+@media only screen and (max-width: 768px) {
+  html, body{
+    max-width: 100%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  .text-center{
+    text-align: center;
+  }
+  .page-container-business-app {
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 2%;
+    padding-right: 2%;
+    width: 96%;
+    height: 80%;
+  }
+  .top-bar{
+    display: none;
+  }
+
+  .store-icons{
+    align-items: center;
+    padding-top: 6%;
+    max-width: 100% ;
+
+  }
+  .divide-row-text-businessApp{
+    max-width: 96% ;
+
+  }
+  .img-size{
+    max-width: 100vw;
+  }
+  .text-width{
+    width: 40%;
   }
 }
