--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,17 @@
   display: flex;
   justify-content: center;
 }
+.areas-list{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 2rem;
+}
+.municipality-list{
+  display: flex;
+  flex-direction: column;
+
+}
 .img-banner{
   height: 12.5rem;
   width: 25rem;
