--- a/src/App.css
+++ b/src/App.css
@@ -302,7 +302,8 @@
 .municipality-list{
   display: flex;
   flex-direction: column;
-
+  justify-content: space-between;
+  height:100%;
 }
 .img-banner{
   height: 6.25rem;
